--- a/Programas_numericos_simples.ipynb
+++ b/Programas_numericos_simples.ipynb
@@ -11,18 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Introduce un Entero: 8\n",
-      "Raíz cubica de  8 es 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = int(input('Introduce un Entero: '))\n",
     "ans=0\n",
@@ -68,6 +59,37 @@
    "metadata": {},
    "source": [
     "print('Valor de la funcion de descodificación abs(x) - ans ** 3 es', \\ abs(x) - ans ** 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variables y Asignación"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Las viariables proporcionan una forma de asociar nombres con objetos. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "pi=3\n",
+    "radius=11\n",
+    "area = pi(radius**2)\n",
+    "radius = 14"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Si el programa ejecuta radius=11, el radio del nombre rebota aun objeto diferente de tipo int, como se vera en la imagen. Tenga en cuenta que esta asignación no tiene efecto sobre el valor al que está vinculada una zona. Todavía está vinculada al objeto indicado por la expresión 3 * ((11**2))  "
    ]
   },
   {
